--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,20 @@
 NODE_ENV=development
 PORT=3001
 
-# Database
-DB_HOST=localhost
+# Database Configuration
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=dpmd_bogor
+DB_NAME=dpmd
 DB_USER=root
 DB_PASSWORD=
 
-# JWT Secret
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT Configuration (use same key as Laravel APP_KEY for compatibility)
+JWT_SECRET=base64:vpA3CHUtaAUuSW8XJFH+6wLrwAaz7VCJC99ofWGffUE=
 JWT_EXPIRES_IN=7d
 
 # File Upload
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./storage/uploads
 
-# CORS
+# CORS (Frontend URL)
 CORS_ORIGIN=http://localhost:5173
