--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.3",
     "compression": "^1.7.4",
@@ -34,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "prisma": "^6.19.0",
     "sequelize": "^6.35.2",
     "winston": "^3.11.0"
   },
