--- a/.env.production
+++ b/.env.production
@@ -2,12 +2,12 @@
 NODE_ENV=production
 PORT=3001
 
-# Database Configuration (PRODUCTION - Update with your production database)
-DB_HOST=your-production-db-host
+# Database Configuration (PRODUCTION)
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=dpmd
-DB_USER=your-production-db-user
-DB_PASSWORD=your-production-db-password
+DB_USER=dpmd_user
+DB_PASSWORD=DpmdBogor2025!
 
 # JWT Configuration (use same key as Laravel APP_KEY for compatibility)
 JWT_SECRET=base64:vpA3CHUtaAUuSW8XJFH+6wLrwAaz7VCJC99ofWGffUE=
@@ -17,5 +17,8 @@ JWT_EXPIRES_IN=7d
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./storage/uploads
 
-# CORS (Update with your production frontend URL)
-CORS_ORIGIN=http://your-production-frontend-url
+# Base URL for file downloads
+BASE_URL=https://api.dpmdbogorkab.id
+
+# CORS (Production Frontend URL)
+CORS_ORIGIN=https://dpmdbogorkab.id
