--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,23 @@ coverage/
 
 # Misc
 *.bak
+*.backup
+*.tmp
+
+# Scripts dan exports temporary
+scripts/export-*.js
+scripts/check-*.js
+scripts/migrate-*.js
+
+# Data JSON temporary (kecuali pegawai-data.json yang siap untuk seeding)
+database-express/seeders/*-data.json
+!database-express/seeders/pegawai-data.json
+
+# SQL dumps dan migrations manual
+*.sql
+!database-express/migrations/*.sql
+!database-express/seeders/bumdes.sql
+!database-express/seeders/001_data.sql
 *.tmp
 
 /src/generated/prisma
