--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2",
+    "web-push": "^3.6.7",
     "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   },
