chore: clean up and rename migrations/seeders for clarity
- Update .gitignore to exclude storage and backup files
- Rename migrations: 001_schema.sql  001_create_all_tables.sql
- Rename seeders for better clarity
- Remove temporary cleanup scripts
- Keep only essential seeder files

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ pids
 # Storage (uploaded files)
 storage/uploads/*
 !storage/uploads/.gitkeep
+storage/produk_hukum/*
+!storage/produk_hukum/.gitkeep
+storage/backups/
+
+# Public backups
+public/backups/
 
 # OS
 .DS_Store
