feat: add latest database seeders synced with production
- Add 001_seed_master_and_sample_data.sql (berita, bidangs, bumdes, desas, kecamatans, pegawai, users)
- Add 002_seed_wilayah_kecamatan_desa.sql (40 kecamatans, 435 desas)
- Add 003_seed_bidang_pegawai.sql (8 bidangs, 98 pegawai)
- Update .gitignore to allow seeders SQL files
- All seeders exported fresh from production database dpmd

--- a/.gitignore
+++ b/.gitignore
@@ -66,9 +66,10 @@ scripts/migrate-*.js
 database-express/seeders/*-data.json
 !database-express/seeders/pegawai-data.json
 
-# SQL dumps dan migrations manual
+# SQL dumps dan migrations manual (kecuali migrations dan seeders)
 *.sql
 !database-express/migrations/*.sql
+!database-express/seeders/*.sql
 !database-express/seeders/bumdes.sql
 !database-express/seeders/001_data.sql
 *.tmp
