--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.35.2",
     "web-push": "^3.6.7",
     "winston": "^3.11.0",
