--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "node-cron": "^4.2.1",
+    "pdfkit": "^0.17.2",
     "sequelize": "^6.35.2",
     "sharp": "^0.34.5",
     "web-push": "^3.6.7",
