--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^3.6.5",
     "node-cron": "^4.2.1",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.35.2",
     "sharp": "^0.34.5",
     "web-push": "^3.6.7",
