--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,9 @@ DB_NAME=dpmd
 DB_USER=dpmd_user
 DB_PASSWORD=DpmdBogor2025!
 
+# Prisma Database URL (connection_limit=50 for 1 juta upload scenarios)
+DATABASE_URL="mysql://dpmd_user:DpmdBogor2025!@127.0.0.1:3306/dpmd?connection_limit=50"
+
 # JWT Configuration (use same key as Laravel APP_KEY for compatibility)
 JWT_SECRET=base64:vpA3CHUtaAUuSW8XJFH+6wLrwAaz7VCJC99ofWGffUE=
 JWT_EXPIRES_IN=7d
