update 1. Kelembagaan Dual Activity Log 2. Aparatur Desa DPMD API

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ UPLOAD_PATH=./storage/uploads
 
 # CORS (Frontend URL)
 CORS_ORIGIN=http://localhost:5173
+
+# External DPMD API (Proxy Pattern)
+# Credentials untuk login ke API external https://dpmd.bogorkab.go.id/api/
+EXTERNAL_DPMD_API_URL=https://dpmd.bogorkab.go.id/api
+EXTERNAL_DPMD_USERNAME=your_api_username
+EXTERNAL_DPMD_PASSWORD=your_api_password
