--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DB_PORT=3306
 DB_NAME=dpmd
 DB_USER=root
 DB_PASSWORD=
+DATABASE_URL=mysql://root:@localhost:3306/dpmd
 
 # JWT Configuration (use same key as Laravel APP_KEY for compatibility)
 JWT_SECRET=base64:vpA3CHUtaAUuSW8XJFH+6wLrwAaz7VCJC99ofWGffUE=
