refactor: switch to prisma db push, remove SQL files from git
- Use 'npx prisma db push' instead of manual SQL migrations
- Simplify package.json scripts (db:push, db:generate, db:setup)
- Update .gitignore: ignore all .sql and prisma/migrations/
- Webhook already runs db push on deploy, no changes needed

--- a/.gitignore
+++ b/.gitignore
@@ -67,12 +67,8 @@ scripts/migrate-*.js
 database-express/seeders/*-data.json
 !database-express/seeders/pegawai-data.json
 
-# SQL dumps dan migrations manual (kecuali migrations dan seeders)
+# SQL dumps - semua .sql tidak masuk GitHub
 *.sql
-!database-express/migrations/*.sql
-!database-express/seeders/*.sql
-!database-express/seeders/bumdes.sql
-!database-express/seeders/001_data.sql
 *.tmp
 
 /src/generated/prisma
@@ -119,8 +115,8 @@ storage/avatars/*
 storage/surat_masuk/*
 !storage/surat_masuk/.gitkeep
 
-# Prisma migrations lock
-prisma/migrations/*_migration_lock.toml
+# Prisma migrations folder (pakai db push, tidak perlu migration files)
+prisma/migrations/
 
 # DBML files and folder
 *.dbml
